# 3d-mesh-morphing

./: .dockerignore  .gitignore  .gitmodules
.claude/: settings.json
2026-04-07_225138_4edb474d/: summary.csv  summary.md  summary_per_model.csv
2026-04-07_225138_4edb474d/gear_hunyuan3d/: metrics.json
2026-04-07_225138_4edb474d/gear_trellis/: metrics.json  reconstructed.glb
2026-04-07_225138_4edb474d/gear_trellis2/: metrics.json
2026-04-07_225138_4edb474d/sphere_hunyuan3d/: metrics.json
2026-04-07_225138_4edb474d/sphere_trellis/: metrics.json  original.off  reconstructed.glb
2026-04-07_225138_4edb474d/sphere_trellis2/: metrics.json
2026-04-07_225138_4edb474d/star_hunyuan3d/: metrics.json  reconstructed.glb
2026-04-07_225138_4edb474d/star_trellis/: metrics.json  reconstructed.glb
2026-04-07_225138_4edb474d/star_trellis2/: metrics.json
2026-04-07_225138_4edb474d/torus_hunyuan3d/: metrics.json  original.off
2026-04-07_225138_4edb474d/torus_trellis/: metrics.json  reconstructed.glb
2026-04-07_225138_4edb474d/torus_trellis2/: metrics.json
2026-04-07_230445_d516cca3/: summary.csv  summary.md  summary_per_model.csv
2026-04-07_230445_d516cca3/shape_37384_hunyuan3d/: metrics.json
2026-04-07_230445_d516cca3/shape_37384_trellis/: metrics.json  reconstructed.glb
2026-04-07_230445_d516cca3/shape_37384_trellis2/: metrics.json  original.off
2026-04-07_230445_d516cca3/shape_37416_hunyuan3d/: metrics.json  original.off  reconstructed.glb
2026-04-07_230445_d516cca3/shape_37416_trellis/: metrics.json  reconstructed.glb
2026-04-07_230445_d516cca3/shape_37416_trellis2/: metrics.json
2026-04-07_230445_d516cca3/shape_38554_hunyuan3d/: metrics.json
2026-04-07_230445_d516cca3/shape_38554_trellis/: metrics.json  reconstructed.glb
2026-04-07_230445_d516cca3/shape_38554_trellis2/: metrics.json
2026-04-07_230445_d516cca3/shape_38741_hunyuan3d/: metrics.json  original.off
2026-04-07_230445_d516cca3/shape_38741_trellis/: metrics.json  reconstructed.glb
2026-04-07_230445_d516cca3/shape_38741_trellis2/: metrics.json
2026-04-07_230445_d516cca3/shape_44498_hunyuan3d/: metrics.json  reconstructed.glb
2026-04-07_230445_d516cca3/shape_44498_trellis/: metrics.json  original.off  reconstructed.glb
2026-04-07_230445_d516cca3/shape_44498_trellis2/: metrics.json
2026-04-07_230445_d516cca3/shape_48013_hunyuan3d/: metrics.json  reconstructed.glb
2026-04-07_230445_d516cca3/shape_48013_trellis/: metrics.json  reconstructed.glb
2026-04-07_230445_d516cca3/shape_48013_trellis2/: metrics.json  original.off
benchmark_pipeline/: .env.example  Dockerfile  README.md  RUNPOD.md  config.yaml  docker-compose.yml  run_pipeline.py
benchmark_pipeline/src/: config.py  downloader.py  metrics.py  reporter.py
benchmark_pipeline/src/models/: __init__.py
benchmark_pipeline/src/pipeline/: __init__.py  graph.py  nodes.py
morphing_pipeline/: .env.example  Dockerfile  Dockerfile.gpu  README.md  config.yaml  docker-compose.yml  pyproject.toml  run_morphing.py
morphing_pipeline/data/: gear_smooth_prompt.txt
morphing_pipeline/src/: __init__.py  config.py  image_generator.py  mesh_repairer.py
morphing_pipeline/src/pipeline/: __init__.py  graph.py  nodes.py  state.py
pipeline/: config.yaml  diagnose_mesh.py  docker-compose.yml  pyproject.toml  run_pipeline.py
pipeline/src/: downloader.py  mesh_utils.py  metrics.py  renderer.py  reporter.py  session.py
pipeline/src/models/: __init__.py  base.py  hunyuan3d.py
pipeline/src/pipeline/: nodes.py  state.py
resources/star/: original.off
runpod/: README.md
runpod/hunyuan3d2/: Dockerfile  requirements.txt  server.py
runpod/trellis/: Dockerfile  requirements.txt  server.py
runpod/trellis2/: Dockerfile  requirements.txt  server.py
shared/: __init__.py  config.py  mesh_quality.py  mesh_utils.py  renderer.py  session.py
shared/models/: __init__.py  base.py  trellis.py  trellis2.py
