[project]
name = "morphing-pipeline"
version = "0.1.0"
description = "3D mesh morphing pipeline: image/mesh → GPT morph → 3D target → transition"
requires-python = "==3.12.*"
dependencies = [
    "trimesh[easy]>=4.4.0,<5.0",
    "scipy>=1.13,<2.0",
    "numpy>=1.26,<2.0",
    "matplotlib>=3.9",
    "gradio-client>=1.3.0",
    "requests>=2.32",
    "pyyaml>=6.0.3",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "huggingface-hub>=0.23",
    "langgraph>=0.2,<1.0",
    "typing-extensions>=4.9",
    "openai>=1.30",
]

[project.optional-dependencies]
# pyrender + OSMesa: used in Docker (Linux). Install with: uv sync --extra render
render = [
    "pyrender>=0.1.45",
    "PyOpenGL>=3.1.0",
]
# PyMeshLab for stage-1 mesh repair. Install with: uv sync --extra repair
repair = [
    "pymeshlab>=2023.12",
]

[tool.setuptools]
py-modules = ["run_morphing"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
